# pacemaker

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: governor_readonly_role.js  governor_readonly_role.sql
harness/: __init__.py  backfill.py  checkout_probe.py  demo.py  enforce.py  live.py  mongodemo.py  multicohort.py  notifiers.py  observe.py  plot.py  preflight.py  seed.py
src/governor/: __init__.py  attribution.py  config.py  dashboard.py  enforcer.py  governor.py  notify.py  observer.py  report.py  tuning.py
src/governor/policy/: __init__.py  aimd.py
src/governor/sensors/: __init__.py  base.py  mongo.py  postgres.py
src/governor/web/: index.html  multi.html
tests/: conftest.py  test_aimd.py  test_attribution.py  test_dashboard.py  test_enforcer.py  test_governor.py  test_integration.py  test_levels.py  test_mongo.py  test_notify.py  test_observe_cli.py  test_observe_evidence.py  test_observer.py  test_preflight.py  test_tuning.py
